--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,13 @@ header p {
     font-size: 1.5em;
 }
 
+.profile-img {
+    width: 100px; /* Adjust the size of the profile image */
+    height: 100px; /* Adjust the size of the profile image */
+    border-radius: 50%; /* Make the image round */
+    margin-left: 10px; /* Add some space between text and image */
+}
+
 section {
     padding: 40px 0;
 }
@@ -68,12 +75,6 @@ ul li {
     height: auto;
 }
 
-footer {
-    background-color: #a01313;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
+/* Footer section removed */
+
+
